<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.example.android.justjava.MainActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1Code"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/plain_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2Code"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvRg">

                <RadioButton
                    android:id="@+id/question1Answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:paddingRight="0dp"
                    android:text="@string/answerB"
                    android:textSize="16sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:paddingRight="0dp"
                    android:text="@string/answerB2"
                    android:textSize="16sp" />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3Code"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/chkIos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerC" />

            <CheckBox
                android:id="@+id/chkIos2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerC2" />

            <CheckBox
                android:id="@+id/chkIos3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerC3" />

        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkAnswer"
            android:text="submit" />

    </LinearLayout>
</ScrollView>